# remoteye

./: .gitignore  README.md
python/: capturer.py
typeye_console/: CMakeLists.txt  main.cpp
